--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         ]
     },
     "minimum-stability": "master",
-    "require": {
-    },
+    "require": {},
     "require-dev": {
         "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
     }
